# joplin-jrnl

./: CHANGELOG  README.md  conf.yaml  jj.sh  package-lock.json  pyproject.toml
contrib/: jj.sh  on-modify.jrnl
jj/: main.py
jj/conf/: conf.yaml
joplin_jrnl/: main.py
